--- a/MoonDawgArduino/Libraries/PinDefinitions/PinDefinitions.properties
+++ b/MoonDawgArduino/Libraries/PinDefinitions/PinDefinitions.properties
@@ -8,7 +8,7 @@ maintainer=camhotwheels@gmail.com
 
 sentence=This contains all of the pin definitions for the MoonDawgArduinoCode.ino.
 
-paragraph=To be added later.
+paragraph=N/A.
 
 category=Definitions
 
