--- a/MoonDawgArduino/Libraries/Movement/Movement.properties
+++ b/MoonDawgArduino/Libraries/Movement/Movement.properties
@@ -8,7 +8,7 @@ maintainer=camhotwheels@gmail.com
 
 sentence=This contains all of the movement classes and functions for the MoonDawgArduinoCode.ino.
 
-paragraph=To be added later.
+paragraph=N/A.
 
 category=Classes
 
